# Panoramic-VPR

./: README.md  pyproject.toml
src/panoramic_vpr/: __init__.py  config.py
src/panoramic_vpr/backbone/: __init__.py  megaloc.py
src/panoramic_vpr/cli/: build_database.py  evaluate.py  retrieve.py
src/panoramic_vpr/database/: __init__.py  builder.py  store.py
src/panoramic_vpr/datasets/: __init__.py  base.py  pitts250k.py  registry.py  yq360.py
src/panoramic_vpr/evaluation/: __init__.py  evaluator.py  metrics.py
src/panoramic_vpr/hyperbolic/: __init__.py  aggregation.py  poincare.py
src/panoramic_vpr/projection/: __init__.py  equirect_to_persp.py
src/panoramic_vpr/retrieval/: __init__.py  engine.py
